# trends

./: .env.example  .flake8  .gitignore  README.md  initialize.ps1  initialize.sh  main.py  pyproject.toml
.cursor/rules/: gemini-structured-output.mdc  google-python-libraries.mdc  uv-instead-of-pip.mdc
.github/workflows/: update-trends.yml
.obsidian/: app.json  appearance.json  core-plugins.json  workspace.json
docs/api-docs/: openrouter-audio.md
